# Pathogen.hs

./: .travis.yml  Pathogen.cabal  README.md  path-pipe-hs.cabal  pipeline.py  run_abyss  stack.yaml  template.yaml  travis.hs
app/: Main.hs
pipeout/: geis.txt  pathdiscov.csv
src/: Config.hs  Index.hs  Install.hs  Pipeline.hs  Utils.hs
test/: DocTest.hs  Spec.hs
