name:                 Pathogen
version:              0.1.0.0
synopsis:             Pathogen discovery pipeline 
-- description:
-- license:
-- license-file:
homepage:             github.com/VDBWRAIR
author:               Michael Panciera
maintainer:           michael.panciera.work@gmail.com
category:             Development
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable path-pipe-hs
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                        , Pathogen
  hs-source-dirs:       app
  default-language:     Haskell2010

test-suite  unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:            Spec.hs
  build-depends:     base
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , Pathogen

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  hs-source-dirs: test
  main-is:       DocTest.hs
  build-depends: base, doctest >= 0.8

library
  hs-source-dirs:     src
  exposed-modules:    Config, Pipeline
  build-depends:      base >= 4.7 && < 5
                      , shake
                      , temporary
                      , directory
                      , biofastq
                      , biocore
                      , bytestring
                      , compressed
                      , optparse-generic
                      , yaml
                      , aeson
  default-language: Haskell2010
